--- a/public/404.html
+++ b/public/404.html
@@ -58,6 +58,8 @@
   <meta property="og:url" content="/" />
   <meta property="og:image" content="img/Logo_275x45.png" />
 
+
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 
