--- a/public/about/index.html
+++ b/public/about/index.html
@@ -62,6 +62,8 @@
   <meta property="og:url" content="/about//" />
   <meta property="og:image" content="img/Logo_275x45.png" />
 
+
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 
@@ -326,7 +328,17 @@
 <script src="https://hardtke.netlify.com/js/owl.carousel.min.js"></script>
 
 
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+</script>
     <script>
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", user => {
